--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
 <h1>Hessel Childrens Centre</h1>
+
+
+
+
+<p>Hessel Childrens Centre is a new child care centre focused on providing the best quality care, right here in South Australia.</p>
+<p>Launching in May 2019</p>
