--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
-<h1>Hessel Childrens Centre</h1>
+<!docytype html>
 
+<html>
 
-
-
-<p>Hessel Childrens Centre is a new child care centre focused on providing the best quality care, right here in South Australia.</p>
-<p>Launching in June 2019</p>
+	<head>
+		<title> Hessel Childrens Centre</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="app.css">
+	</head>
+	<body>
+		<h1>Hessel Childrens Centre</h1>
+		<p>Hessel Childrens Centre is a new child care centre focused on providing the best quality care, right here in South Australia.</p>
+		<p>Launching in June 2019</p>
+	</body>
+</html>
