--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="app.css">
 	</head>
 	<body>
-		<h1>Hessel Childrens Centre</h1>
+		<h1><img src="img/hessel-logo.png" alt="hessel childrens centre"></h1>
 		<p>Hessel Childrens Centre is a new child care centre focused on providing the best quality care, right here in South Australia.</p>
 		<p>Launching in May 2019</p>
 	</body>
